--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/NLCHAN168/workoutbot#readme",
   "dependencies": {
+    "discord-api-types": "^0.37.63",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
     "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0"
   }
 }
